Added 2 Pages, updated mobile UI, updated readme
* Added Details Page
* Added Settings Page
* Added Dosage type Images
* Added Image Provider
* Updated Mobile UI
* Updated readme.md

--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -1,3 +1,15 @@
 page-details {
+    
+    .center-icon{
+        font-size: 50%;
+    }
 
+    .headerImage{
+        width: 70%;
+        padding-left: 25%;
+    }
+
+    .title{
+        color: #00b169;
+    }
 }
