--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -28,7 +28,11 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+
+  darkGrey: #808080,
+  paragraphs: #3c3c3c,
+  title: #00b169
 );
 
 
